--- a/src/main/resources/FXML/QLBan.fxml
+++ b/src/main/resources/FXML/QLBan.fxml
@@ -63,15 +63,17 @@
                     <!-- Lưới món ăn -->
                     <ScrollPane fitToWidth="true" prefHeight="880.0" prefWidth="1040.0" styleClass="menu-scroll">
                         <content>
-                            <FlowPane hgap="50" prefHeight="689.0" prefWidth="1038.0" styleClass="menu-grid" vgap="30">
+                            <FlowPane fx:id="flowPaneBan" alignment="CENTER" hgap="50" prefWidth="1038.0" styleClass="menu-grid" vgap="30">
+
 
                                 <!-- ========== MÓN 1 ========== -->
                                 <VBox styleClass="menu-item">
-                                    <ImageView styleClass="menu-image">
+                                    <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                         <image>
                                             <Image url="@../IMG/ban/IN.png" />
                                         </image>
                                     </ImageView>
+
                                     <HBox styleClass="item-info">
                               <children>
                                  <VBox prefHeight="40.0" prefWidth="73.0" styleClass="item-group">
@@ -95,9 +97,9 @@
                               </children>
                                     </HBox>
                                 </VBox>
-                        <VBox layoutX="389.0" layoutY="201.0" styleClass="menu-item">
+                        <VBox layoutX="579.0" layoutY="30.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -126,9 +128,9 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="554.0" layoutY="201.0" styleClass="menu-item">
+                        <VBox layoutX="704.0" layoutY="30.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -157,9 +159,9 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="719.0" layoutY="201.0" styleClass="menu-item">
+                        <VBox layoutX="829.0" layoutY="30.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -188,9 +190,9 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="389.0" layoutY="370.0" styleClass="menu-item">
+                        <VBox layoutX="954.0" layoutY="30.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -219,9 +221,9 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="554.0" layoutY="370.0" styleClass="menu-item">
+                        <VBox layoutX="1079.0" layoutY="30.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -250,9 +252,9 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="719.0" layoutY="370.0" styleClass="menu-item">
+                        <VBox layoutX="579.0" layoutY="280.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -281,9 +283,9 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="383.0" layoutY="694.0" styleClass="menu-item">
+                        <VBox layoutX="704.0" layoutY="280.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
@@ -312,9 +314,40 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <VBox layoutX="548.0" layoutY="694.0" styleClass="menu-item">
+                        <VBox layoutX="829.0" layoutY="280.0" styleClass="menu-item">
                            <children>
-                              <ImageView styleClass="menu-image">
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
+                                 <image>
+                                    <Image url="@../IMG/ban/IN.png" />
+                                 </image>
+                              </ImageView>
+                              <HBox styleClass="item-info">
+                                 <children>
+                                    <VBox prefHeight="40.0" prefWidth="73.0" styleClass="item-group">
+                                       <children>
+                                          <Label prefHeight="21.0" prefWidth="64.0" styleClass="item-title" text="Khu Vực" />
+                                          <Label styleClass="item-detail" text="IN" />
+                                       </children>
+                                    </VBox>
+                                    <VBox layoutX="107.0" layoutY="20.0" prefHeight="40.0" prefWidth="58.0" styleClass="item-group">
+                                       <children>
+                                          <Label styleClass="item-title" text="Mã Bàn" />
+                                          <Label styleClass="item-detail" text="BI0001" />
+                                       </children>
+                                    </VBox>
+                                    <VBox layoutX="135.0" layoutY="20.0" prefHeight="40.0" prefWidth="82.0" styleClass="item-group">
+                                       <children>
+                                          <Label styleClass="item-title" text="Số Lượng" />
+                                          <Label styleClass="item-detail" text="1-2" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox layoutX="954.0" layoutY="280.0" styleClass="menu-item">
+                           <children>
+                              <ImageView fitHeight="140" fitWidth="200" preserveRatio="true" smooth="true" styleClass="menu-image">
                                  <image>
                                     <Image url="@../IMG/ban/IN.png" />
                                  </image>
