--- a/src/main/resources/FXML/QLNhanVien.fxml
+++ b/src/main/resources/FXML/QLNhanVien.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.Region?>
-<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qlnhanvien.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qlnhanvien.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Nội dung chính ở giữa -->
     <center>
@@ -27,7 +27,7 @@
             <padding>
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
-            <VBox prefHeight="780.0" prefWidth="660.0" styleClass="center-p" VBox.vgrow="ALWAYS">
+            <VBox prefHeight="760.0" prefWidth="916.0" styleClass="center-p" VBox.vgrow="ALWAYS">
                 <children>
                     <HBox alignment="CENTER" prefHeight="56.0" prefWidth="660.0" spacing="10" style="-fx-background-color: white; -fx-background-radius: 20;">
                         <TextField layoutX="14.0" layoutY="7.0" prefHeight="40.0" prefWidth="577.0" promptText="Tìm nhân viên..." styleClass="search-field" HBox.hgrow="ALWAYS" />
@@ -35,8 +35,14 @@
                     <!-- Scroll menu -->
                     <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" prefHeight="678.0" prefWidth="660.0" styleClass="scroll_order" VBox.vgrow="ALWAYS">
                         <content>
-                            <FlowPane fx:id="menuFlow" alignment="CENTER" hgap="20" prefHeight="600" prefWidth="900" prefWrapLength="900" styleClass="menu-flowpane" vgap="20">
-                                <padding>
+                            <FlowPane fx:id="menuFlow"
+                                      alignment="CENTER"
+                                      hgap="30" vgap="30"
+                                      prefWidth="600"
+                                      prefHeight="480"
+                                      prefWrapLength="500"
+                                      styleClass="menu-flowpane">
+                            <padding>
                                     <Insets bottom="10" left="10" right="10" top="10" />
                                 </padding>
 
@@ -108,7 +114,7 @@
         <!-- Cột phải: Thông tin chi tiết nhân viên -->
         <VBox prefWidth="480" spacing="20" styleClass="employee-details-section" HBox.hgrow="ALWAYS">
             <!-- Tiêu đề -->
-            <Label styleClass="main-title" text="Thông Tin Nhân Viên" />
+            <Label prefHeight="64.0" prefWidth="424.0" styleClass="main-title" text="Thông Tin Nhân Viên" />
 
             <!-- Form thông tin nhân viên -->
             <VBox prefHeight="652.0" prefWidth="480.0" spacing="15" styleClass="info-form-section">
@@ -156,12 +162,12 @@
                     <!-- Hàng 8: Trạng thái -->
                     <Label styleClass="form-label" text="Trạng Thái:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
                     <HBox spacing="20" GridPane.columnIndex="1" GridPane.rowIndex="7">
-                        <RadioButton selected="true" styleClass="status-radio" text="● Còn Làm">
+                        <RadioButton selected="true" styleClass="status-radio" text="Còn Làm">
                             <toggleGroup>
                                 <ToggleGroup fx:id="statusGroup" />
                             </toggleGroup>
                         </RadioButton>
-                        <RadioButton styleClass="status-radio" text="● Nghỉ Làm" toggleGroup="$statusGroup" />
+                        <RadioButton styleClass="status-radio" text="Nghỉ Làm" toggleGroup="$statusGroup" />
                     </HBox>
                <rowConstraints>
                   <RowConstraints />
