--- a/src/main/resources/FXML/sidebar_QL.fxml
+++ b/src/main/resources/FXML/sidebar_QL.fxml
@@ -24,7 +24,7 @@
             <HBox alignment="CENTER" spacing="15" styleClass="avatar_section">
                 <children>
                     <StackPane alignment="CENTER">
-                        <Circle fill="#f0f0f0" radius="57" stroke="#cccccc" strokeWidth="2" />
+                        <Circle fx:id="avatarCircle" fill="#f0f0f0" radius="57" stroke="#cccccc" strokeWidth="2" />
                         <Circle radius="55">
                             <fill>
                                 <ImagePattern>
@@ -36,10 +36,8 @@
                         </Circle>
                     </StackPane>
                     <VBox alignment="CENTER_LEFT" spacing="5">
-                        <children>
-                            <Label styleClass="username" text="Đỗ Minh Quân" />
-                            <Label styleClass="role" text="Quản Lí" />
-                        </children>
+                        <Label fx:id="lblTenNV" styleClass="username" text="Tên nhân viên" />
+                        <Label fx:id="lblChucVu" styleClass="role" text="Chức vụ" />
                     </VBox>
                 </children>
             </HBox>
