--- a/src/main/resources/FXML/QLNhanVien.fxml
+++ b/src/main/resources/FXML/QLNhanVien.fxml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qlnhanvien.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="800" prefWidth="1400"
+            fx:controller="ui.controllers.QLNhanVienController"
+            styleClass="root-pane"
+            stylesheets="@../CSS/qlnhanvien.css"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Nội dung chính ở giữa -->
     <center>
@@ -29,11 +20,21 @@
             </padding>
             <VBox prefHeight="760.0" prefWidth="916.0" styleClass="center-p" VBox.vgrow="ALWAYS">
                 <children>
-                    <HBox alignment="CENTER" prefHeight="56.0" prefWidth="660.0" spacing="10" style="-fx-background-color: white; -fx-background-radius: 20;">
-                        <TextField layoutX="14.0" layoutY="7.0" prefHeight="40.0" prefWidth="577.0" promptText="Tìm nhân viên..." styleClass="search-field" HBox.hgrow="ALWAYS" />
+                    <HBox alignment="CENTER" prefHeight="56.0" prefWidth="660.0" spacing="10"
+                          style="-fx-background-color: white; -fx-background-radius: 20;">
+                        <TextField fx:id="txtTimKiem"
+                                   layoutX="14.0" layoutY="7.0"
+                                   prefHeight="40.0" prefWidth="577.0"
+                                   promptText="Tìm nhân viên..."
+                                   styleClass="search-field"
+                                   HBox.hgrow="ALWAYS" />
                     </HBox>
-                    <!-- Scroll menu -->
-                    <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" prefHeight="678.0" prefWidth="660.0" styleClass="scroll_order" VBox.vgrow="ALWAYS">
+
+                    <!-- Scroll danh sách nhân viên -->
+                    <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true"
+                                prefHeight="678.0" prefWidth="660.0"
+                                styleClass="scroll_order"
+                                VBox.vgrow="ALWAYS">
                         <content>
                             <FlowPane fx:id="menuFlow"
                                       alignment="CENTER"
@@ -42,157 +43,112 @@
                                       prefHeight="480"
                                       prefWrapLength="500"
                                       styleClass="menu-flowpane">
-                            <padding>
+                                <padding>
                                     <Insets bottom="10" left="10" right="10" top="10" />
                                 </padding>
-
-                                <!-- Món mẫu -->
-                                <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                    <ImageView fitHeight="250" fitWidth="220" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/cua_ca_mau.png" />
-                                        </image>
-                                    </ImageView>
-                                    <Label styleClass="menu-item-name" text="NV001" />
-                                    <Label styleClass="menu-item-price" text="Trần Lê Khoai" />
-                                </VBox>
-                                <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                    <ImageView fitHeight="250" fitWidth="220" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/cua_ca_mau.png" />
-                                        </image>
-                                    </ImageView>
-                                    <Label styleClass="menu-item-name" text="NV001" />
-                                    <Label styleClass="menu-item-price" text="Trần Lê Khoai" />
-                                </VBox>
-                                <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                    <ImageView fitHeight="250" fitWidth="220" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/cua_ca_mau.png" />
-                                        </image>
-                                    </ImageView>
-                                    <Label styleClass="menu-item-name" text="NV001" />
-                                    <Label styleClass="menu-item-price" text="Trần Lê Khoai" />
-                                </VBox>
-                                <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                    <ImageView fitHeight="250" fitWidth="220" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/cua_ca_mau.png" />
-                                        </image>
-                                    </ImageView>
-                                    <Label styleClass="menu-item-name" text="NV001" />
-                                    <Label styleClass="menu-item-price" text="Trần Lê Khoai" />
-                                </VBox>
-                                <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                    <ImageView fitHeight="250" fitWidth="220" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/cua_ca_mau.png" />
-                                        </image>
-                                    </ImageView>
-                                    <Label styleClass="menu-item-name" text="NV001" />
-                                    <Label styleClass="menu-item-price" text="Trần Lê Khoai" />
-                                </VBox>
-                                <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                    <ImageView fitHeight="250" fitWidth="220" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/cua_ca_mau.png" />
-                                        </image>
-                                    </ImageView>
-                                    <Label styleClass="menu-item-name" text="NV001" />
-                                    <Label styleClass="menu-item-price" text="Trần Lê Khoai" />
-                                </VBox>
                             </FlowPane>
                         </content>
                     </ScrollPane>
                 </children>
             </VBox>
-
-
         </HBox>
     </center>
-    <right>
-        <!-- Cột phải: Thông tin chi tiết nhân viên -->
-        <VBox prefWidth="480" spacing="20" styleClass="employee-details-section" HBox.hgrow="ALWAYS">
-            <!-- Tiêu đề -->
-            <Label prefHeight="64.0" prefWidth="424.0" styleClass="main-title" text="Thông Tin Nhân Viên" />
 
-            <!-- Form thông tin nhân viên -->
-            <VBox prefHeight="652.0" prefWidth="480.0" spacing="15" styleClass="info-form-section">
-                <GridPane hgap="20" styleClass="info-grid" vgap="15">
+    <!-- Phần bên phải: Thông tin chi tiết nhân viên -->
+    <right>
+        <VBox prefWidth="480" spacing="20"
+              styleClass="employee-details-section"
+              HBox.hgrow="ALWAYS">
+            <!-- Tiêu đề -->
+            <Label prefHeight="64.0" prefWidth="424.0"
+                   styleClass="main-title"
+                   text="Thông Tin Nhân Viên" />
+
+            <!-- Form thông tin -->
+            <VBox prefHeight="652.0" prefWidth="480.0" spacing="15"
+                  styleClass="info-form-section">
+                <GridPane hgap="20" vgap="15" styleClass="info-grid">
                     <columnConstraints>
                         <ColumnConstraints percentWidth="30" />
                         <ColumnConstraints percentWidth="70" />
                     </columnConstraints>
 
-                    <!-- Hàng 1: Mã nhân viên -->
-                    <Label styleClass="form-label" text="Mã Nhân Viên:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <Label styleClass="form-value" text="NV0001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <!-- Mã nhân viên -->
+                    <Label styleClass="form-label" text="Mã Nhân Viên:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                    <Label fx:id="lblMaNV"
+                           styleClass="form-value"
+                           text="--"
+                           GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                    <!-- Hàng 2: Tên nhân viên -->
-                    <Label styleClass="form-label" text="Tên Nhân Viên:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                    <TextField styleClass="form-input" text="Trần Ngọc Oanh" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <!-- Tên nhân viên -->
+                    <Label styleClass="form-label" text="Tên Nhân Viên:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                    <TextField fx:id="txtTenNV"
+                               styleClass="form-input"
+                               promptText="Nhập tên nhân viên"
+                               GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                    <!-- Hàng 3: SDT -->
-                    <Label styleClass="form-label" text="SDT:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                    <TextField styleClass="form-input" text="0398765432" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <!-- SDT -->
+                    <Label styleClass="form-label" text="SĐT:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                    <TextField fx:id="txtSDT"
+                               styleClass="form-input"
+                               promptText="Nhập số điện thoại"
+                               GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                    <!-- Hàng 4: Ngày sinh -->
-                    <Label styleClass="form-label" text="Ngày Sinh:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                    <TextField styleClass="form-input" text="1/5/2005" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <!-- Ngày sinh -->
+                    <Label styleClass="form-label" text="Ngày Sinh:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                    <TextField fx:id="txtNgaySinh"
+                               styleClass="form-input"
+                               promptText="dd/mm/yyyy"
+                               GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                    <!-- Hàng 5: Giới tính -->
-                    <Label styleClass="form-label" text="Giới Tính:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                    <!-- Giới tính -->
+                    <Label styleClass="form-label" text="Giới Tính:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="4" />
                     <HBox spacing="20" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                        <RadioButton styleClass="gender-radio" text="Nam">
-                            <toggleGroup>
-                                <ToggleGroup fx:id="genderGroup" />
-                            </toggleGroup>
-                        </RadioButton>
-                        <RadioButton selected="true" styleClass="gender-radio" text="Nữ" toggleGroup="$genderGroup" />
+                        <RadioButton fx:id="rdoNam" text="Nam" styleClass="gender-radio" />
+                        <RadioButton fx:id="rdoNu" text="Nữ" styleClass="gender-radio" />
                     </HBox>
 
-                    <!-- Hàng 6: Ngày vào làm -->
-                    <Label styleClass="form-label" text="Ngày Vào Làm:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                    <TextField styleClass="form-input" text="20-6-2025" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                    <!-- Ngày vào làm -->
+                    <Label styleClass="form-label" text="Ngày Vào Làm:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                    <TextField fx:id="txtNgayVaoLam"
+                               styleClass="form-input"
+                               promptText="yyyy-mm-dd"
+                               GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-                    <!-- Hàng 7: Chức vụ -->
-                    <Label styleClass="form-label" text="Chức Vụ:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                    <ComboBox promptText="Chọn chức vụ" styleClass="form-combo" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                    <!-- Chức vụ -->
+                    <Label styleClass="form-label" text="Chức Vụ:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                    <ComboBox fx:id="comboChucVu"
+                              promptText="Chọn chức vụ"
+                              styleClass="form-combo"
+                              GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-                    <!-- Hàng 8: Trạng thái -->
-                    <Label styleClass="form-label" text="Trạng Thái:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                    <!-- Trạng thái -->
+                    <Label styleClass="form-label" text="Trạng Thái:"
+                           GridPane.columnIndex="0" GridPane.rowIndex="7" />
                     <HBox spacing="20" GridPane.columnIndex="1" GridPane.rowIndex="7">
-                        <RadioButton selected="true" styleClass="status-radio" text="Còn Làm">
-                            <toggleGroup>
-                                <ToggleGroup fx:id="statusGroup" />
-                            </toggleGroup>
-                        </RadioButton>
-                        <RadioButton styleClass="status-radio" text="Nghỉ Làm" toggleGroup="$statusGroup" />
+                        <RadioButton fx:id="rdoConLam" text="Còn Làm" styleClass="status-radio" />
+                        <RadioButton fx:id="rdoNghiLam" text="Nghỉ Làm" styleClass="status-radio" />
                     </HBox>
-               <rowConstraints>
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-                  <RowConstraints />
-               </rowConstraints>
                 </GridPane>
-
             </VBox>
-            <HBox styleClass="right-action-buttons">
-                <HBox alignment="CENTER" styleClass="action-buttons">
-                    <Button styleClass="confirm-btn" text="Xác Nhận" />
-                </HBox>
+
+            <!-- Nút hành động -->
+            <HBox styleClass="right-action-buttons" spacing="10">
+                <Button fx:id="btnXacNhan"
+                        styleClass="confirm-btn"
+                        text="Xác Nhận" />
                 <Region HBox.hgrow="ALWAYS" />
-                <HBox alignment="CENTER" styleClass="action-buttons">
-                    <Button styleClass="delete-btn" text="Xoá" />
-                </HBox>
+                <Button fx:id="btnXoa"
+                        styleClass="delete-btn"
+                        text="Xoá" />
             </HBox>
         </VBox>
-
     </right>
-
 </BorderPane>
