--- a/src/main/resources/FXML/QLMenu.fxml
+++ b/src/main/resources/FXML/QLMenu.fxml
@@ -15,7 +15,12 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/qlmenu.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="800" prefWidth="1400.0"
+            style="-fx-background-color: D9D9D9;"
+            stylesheets="@../CSS/qlmenu.css"
+            fx:controller="ui.controllers.QLMenuController"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1">
 
 
     <!-- Main content -->
@@ -40,10 +45,7 @@
                       <ComboBox fx:id="comboDanhMuc" prefWidth="140" promptText="Hải sản">
                           <items>
                               <FXCollections fx:factory="observableArrayList">
-                                  <String fx:value="Hải sản" />
-                                  <String fx:value="Đồ uống" />
-                                  <String fx:value="Món chính" />
-                                  <String fx:value="Tráng miệng" />
+                                  <String fx:value="Chọn Loại Món" />
                               </FXCollections>
                           </items>
                      <HBox.margin>
@@ -58,145 +60,12 @@
                       <Label styleClass="menu-add-btn" text="+" />
       
                   </HBox>
-      
-      
+
+
                   <!-- Lưới món ăn -->
                   <ScrollPane fitToWidth="true" prefHeight="880.0" prefWidth="1040.0" styleClass="menu-scroll">
                       <content>
-                          <FlowPane hgap="50" prefHeight="881.0" prefWidth="1026.0" styleClass="menu-grid" vgap="30">
-      
-                              <!-- ========== MÓN 1 ========== -->
-                              <VBox styleClass="menu-item">
-                                  <ImageView styleClass="menu-image">
-                                      <image>
-                                          <Image url="@../IMG/banhmi.png" />
-                                      </image>
-                                  </ImageView>
-                                  <HBox styleClass="item-info">
-                                      <Label styleClass="item-name" text="Bánh mì" />
-                                      <Region HBox.hgrow="ALWAYS" />
-                                      <Label styleClass="item-price" text="50.000 đ" />
-                                  </HBox>
-                              </VBox>
-      
-                              <!-- ========== MÓN 2 ========== -->
-                              <VBox styleClass="menu-item">
-                                  <ImageView styleClass="menu-image">
-                                      <image>
-                                          <Image url="@../IMG/banhmi.png" />
-                                      </image>
-                                  </ImageView>
-                                  <HBox styleClass="item-info">
-                                      <Label styleClass="item-name" text="Nước cam" />
-                                      <Region HBox.hgrow="ALWAYS" />
-                                      <Label styleClass="item-price" text="35.000 đ" />
-                                  </HBox>
-                              </VBox>
-      
-                              <!-- ========== MÓN 3 ========== -->
-                              <VBox styleClass="menu-item">
-                                  <ImageView styleClass="menu-image">
-                                      <image>
-                                          <Image url="@../IMG/banhmi.png" />
-                                      </image>
-                                  </ImageView>
-                                  <HBox styleClass="item-info">
-                                      <Label styleClass="item-name" text="Cơm tấm" />
-                                      <Region HBox.hgrow="ALWAYS" />
-                                      <Label styleClass="item-price" text="65.000 đ" />
-                                  </HBox>
-                              </VBox>
-      
-                              <!-- ========== MÓN 4 ========== -->
-                              <VBox styleClass="menu-item">
-                                  <ImageView styleClass="menu-image">
-                                      <image>
-                                          <Image url="@../IMG/banhmi.png" />
-                                      </image>
-                                  </ImageView>
-                                  <HBox styleClass="item-info">
-                                      <Label styleClass="item-name" text="Cá hồi nướng" />
-                                      <Region HBox.hgrow="ALWAYS" />
-                                      <Label styleClass="item-price" text="120.000 đ" />
-                                  </HBox>
-                              </VBox>
-      
-                              <!-- ========== MÓN 5 ========== -->
-                              <VBox styleClass="menu-item">
-                                  <ImageView styleClass="menu-image">
-                                      <image>
-                                          <Image url="@../IMG/banhmi.png" />
-                                      </image>
-                                  </ImageView>
-                                  <HBox styleClass="item-info">
-                                      <Label styleClass="item-name" text="Bánh kem" />
-                                      <Region HBox.hgrow="ALWAYS" />
-                                      <Label styleClass="item-price" text="80.000 đ" />
-                                  </HBox>
-                              </VBox>
-      
-                              <!-- ========== MÓN 6 ========== -->
-                              <VBox styleClass="menu-item">
-                                  <ImageView styleClass="menu-image">
-                                      <image>
-                                          <Image url="@../IMG/banhmi.png" />
-                                      </image>
-                                  </ImageView>
-                                  <HBox styleClass="item-info">
-                                      <Label styleClass="item-name" text="Trà sữa" />
-                                      <Region HBox.hgrow="ALWAYS" />
-                                      <Label styleClass="item-price" text="45.000 đ" />
-                                  </HBox>
-                              </VBox>
-                        <VBox layoutX="53.0" layoutY="140.0" styleClass="menu-item">
-                           <children>
-                              <ImageView styleClass="menu-image">
-                                 <image>
-                                    <Image url="@../IMG/banhmi.png" />
-                                 </image>
-                              </ImageView>
-                              <HBox styleClass="item-info">
-                                 <children>
-                                    <Label styleClass="item-name" text="Bánh mì" />
-                                    <Region HBox.hgrow="ALWAYS" />
-                                    <Label styleClass="item-price" text="50.000 đ" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox layoutX="383.0" layoutY="636.0" styleClass="menu-item">
-                           <children>
-                              <ImageView styleClass="menu-image">
-                                 <image>
-                                    <Image url="@../IMG/banhmi.png" />
-                                 </image>
-                              </ImageView>
-                              <HBox styleClass="item-info">
-                                 <children>
-                                    <Label styleClass="item-name" text="Bánh mì" />
-                                    <Region HBox.hgrow="ALWAYS" />
-                                    <Label styleClass="item-price" text="50.000 đ" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox layoutX="548.0" layoutY="636.0" styleClass="menu-item">
-                           <children>
-                              <ImageView styleClass="menu-image">
-                                 <image>
-                                    <Image url="@../IMG/banhmi.png" />
-                                 </image>
-                              </ImageView>
-                              <HBox styleClass="item-info">
-                                 <children>
-                                    <Label styleClass="item-name" text="Bánh mì" />
-                                    <Region HBox.hgrow="ALWAYS" />
-                                    <Label styleClass="item-price" text="50.000 đ" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-      
+                          <FlowPane fx:id="flowMonAn" hgap="50" prefHeight="881.0" prefWidth="1026.0" styleClass="menu-grid" vgap="30">
                           </FlowPane>
                       </content>
                   </ScrollPane>
