--- a/src/main/resources/FXML/ChonMon.fxml
+++ b/src/main/resources/FXML/ChonMon.fxml
@@ -19,6 +19,7 @@
             prefWidth="1400.0"
             style="-fx-background-color: D9D9D9;"
             stylesheets="@../CSS/chonmon.css"
+            fx:controller="ui.controllers.ChonMonController"
             xmlns="http://javafx.com/javafx/24.0.1"
             xmlns:fx="http://javafx.com/fxml/1">
 
@@ -41,121 +42,12 @@
                       <TextField layoutX="14.0" layoutY="7.0" prefHeight="63.0" prefWidth="577.0" promptText="Tìm món ăn..." styleClass="search-field" HBox.hgrow="ALWAYS" />
                   </HBox>
                   <!-- Scroll menu -->
-                  <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" prefHeight="678.0" prefWidth="660.0" styleClass="scroll_order" VBox.vgrow="ALWAYS">
-                      <content>
-                          <FlowPane fx:id="menuFlow" alignment="CENTER" hgap="20" prefHeight="600" prefWidth="900" prefWrapLength="900" styleClass="menu-flowpane" vgap="20">
-                          <padding>
-                                  <Insets bottom="10" left="10" right="10" top="10" />
-                              </padding>
-      
-                              <!-- Món mẫu -->
-                              <VBox prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                                  <ImageView fitHeight="200" fitWidth="255" preserveRatio="true">
-                                      <image>
-                                          <Image url="@../IMG/cua_ca_mau.png" />
-                                      </image>
-                                  </ImageView>
-                                  <Label styleClass="menu-item-name" text="Cua Cà Mau" />
-                                  <Label styleClass="menu-item-price" text="200.000 đ" />
-                                  <HBox alignment="CENTER" spacing="10" styleClass="quantity-controls">
-                                      <Button styleClass="qty-btn_minus" text="-" />
-                                      <Label styleClass="qty-label" text="0" />
-                                      <Button styleClass="qty-btn_plus" text="+" />
-                                  </HBox>
-                              </VBox>
-                        <VBox layoutX="200.0" layoutY="239.0" prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                           <children>
-                              <ImageView fitHeight="200" fitWidth="255" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../IMG/cua_ca_mau.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="menu-item-name" text="Cua Cà Mau" />
-                              <Label styleClass="menu-item-price" text="200.000 đ" />
-                              <HBox alignment="CENTER" spacing="10" styleClass="quantity-controls">
-                                 <children>
-                                    <Button styleClass="qty-btn_minus" text="-" />
-                                    <Label styleClass="qty-label" text="0" />
-                                    <Button styleClass="qty-btn_plus" text="+" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox layoutX="340.0" layoutY="239.0" prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                           <children>
-                              <ImageView fitHeight="200" fitWidth="255" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../IMG/cua_ca_mau.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="menu-item-name" text="Cua Cà Mau" />
-                              <Label styleClass="menu-item-price" text="200.000 đ" />
-                              <HBox alignment="CENTER" spacing="10" styleClass="quantity-controls">
-                                 <children>
-                                    <Button styleClass="qty-btn_minus" text="-" />
-                                    <Label styleClass="qty-label" text="0" />
-                                    <Button styleClass="qty-btn_plus" text="+" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox layoutX="200.0" layoutY="359.0" prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                           <children>
-                              <ImageView fitHeight="200" fitWidth="255" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../IMG/cua_ca_mau.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="menu-item-name" text="Cua Cà Mau" />
-                              <Label styleClass="menu-item-price" text="200.000 đ" />
-                              <HBox alignment="CENTER" spacing="10" styleClass="quantity-controls">
-                                 <children>
-                                    <Button styleClass="qty-btn_minus" text="-" />
-                                    <Label styleClass="qty-label" text="0" />
-                                    <Button styleClass="qty-btn_plus" text="+" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox layoutX="340.0" layoutY="359.0" prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                           <children>
-                              <ImageView fitHeight="200" fitWidth="255" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../IMG/cua_ca_mau.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="menu-item-name" text="Cua Cà Mau" />
-                              <Label styleClass="menu-item-price" text="200.000 đ" />
-                              <HBox alignment="CENTER" spacing="10" styleClass="quantity-controls">
-                                 <children>
-                                    <Button styleClass="qty-btn_minus" text="-" />
-                                    <Label styleClass="qty-label" text="0" />
-                                    <Button styleClass="qty-btn_plus" text="+" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                        <VBox layoutX="200.0" layoutY="510.0" prefHeight="339.0" prefWidth="176.0" styleClass="menu-card">
-                           <children>
-                              <ImageView fitHeight="200" fitWidth="255" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../IMG/cua_ca_mau.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="menu-item-name" text="Cua Cà Mau" />
-                              <Label styleClass="menu-item-price" text="200.000 đ" />
-                              <HBox alignment="CENTER" spacing="10" styleClass="quantity-controls">
-                                 <children>
-                                    <Button styleClass="qty-btn_minus" text="-" />
-                                    <Label styleClass="qty-label" text="0" />
-                                    <Button styleClass="qty-btn_plus" text="+" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                          </FlowPane>
-                      </content>
-                  </ScrollPane>
+                <ScrollPane fitToWidth="true" prefHeight="880.0" prefWidth="1040.0" styleClass="menu-scroll">
+                    <content>
+                        <FlowPane fx:id="flowMonAn" hgap="50" prefHeight="881.0" prefWidth="1026.0" styleClass="menu-grid" vgap="30">
+                        </FlowPane>
+                    </content>
+                </ScrollPane>
             </children>
          </VBox>
         </VBox>
