--- a/src/main/resources/FXML/QLMenu.fxml
+++ b/src/main/resources/FXML/QLMenu.fxml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800" prefWidth="1400.0"
-            style="-fx-background-color: D9D9D9;"
-            stylesheets="@../CSS/qlmenu.css"
-            fx:controller="ui.controllers.QLMenuController"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="800" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/qlmenu.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.QLMenuController">
 
 
     <!-- Main content -->
@@ -42,11 +33,8 @@
                       </HBox>
       
                       <!-- ComboBox chọn danh mục -->
-                      <ComboBox fx:id="comboDanhMuc" prefWidth="140" promptText="Hải sản">
+                      <ComboBox fx:id="comboDanhMuc" prefHeight="39.0" prefWidth="186.0" promptText="Chọn Loại Món">
                           <items>
-                              <FXCollections fx:factory="observableArrayList">
-                                  <String fx:value="Chọn Loại Món" />
-                              </FXCollections>
                           </items>
                      <HBox.margin>
                         <Insets left="40.0" />
